[metadata]
name = specific_import
version = 0.9
author = Hadron DaVinci
description = This package simplifies importing relative and absolute module paths
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudouser2010/specific_import
project_urls =
    Bug Tracker = https://github.com/sudouser2010/specific_import/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src